fix (style): aligned main page layout, fixes #68
* Align Headings vertically and horizontally with their neighbouring
elements
* replace `col-md-*` with `col-xs-*` to prevent huge carousel-item
images
* create _carousel.scss for all carousel related styles

--- a/app/scss/_social-media.scss
+++ b/app/scss/_social-media.scss
@@ -1,6 +1,24 @@
+.social-sidebar {
+  @extend .col-md-4;
+  padding: 0 2.5rem;
+  @media screen and (min-width: $medium-screen) {
+    border-left: $default-border-style;
+  }
+}
+
 .post-list {
   list-style-type: none;
   padding-left: 0;
+}
+
+.post {
+  margin-top: 2rem;
+  padding-bottom: 2rem;
+  border-bottom: $default-border-style;
+}
+
+.post:last-child {
+  border-bottom: none;
 }
 
 .post-body {
